--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -1,7 +1,7 @@
 include ../head.pug
 body
     .container
-        h1.main-title List of clients registration
+        h1.main-title Football Field Registration List
         a.btn-add(href='/add', role='button') Reserve the field
         table.clients-table
             thead
