--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -26,15 +26,15 @@
 .clients-table tr {
     display: grid;
     grid-template-columns: 1fr 3fr 3fr 3fr 3fr 3fr 3fr;
-    background-color: #008E08;
-    color: white;
+    background-color: #f5f5f5;
+    color: #000000;
 }
 .clients-table thead tr {
     background-color: black;
     color: white;
 }
 .clients-table tr:nth-child(even) {
-    background-color: #00A308;
+    background-color: #e2e2e2;
 }
 .clients-table th,
 .clients-table td {
@@ -51,14 +51,16 @@
     border-radius: 6px;
     cursor: pointer;
     background-color: white;
-    border-color: white;
+    border: none;
 }
 .btn-edit {
     color: blue;
     margin-right: 10px;
+    border: 1px solid blue;
 }
 .btn-delete {
     color: red;
+    border: 1px solid red;
 }
 .btn-add {
     border: 1px solid green;
@@ -79,8 +81,8 @@ a.btn-add {
     text-decoration: none;
     font-size: 20px;
     margin-top: 0;
-    background-color: blue;
-    color: white;
+    background-color: #f5f5f5;
+    color: black;
 }
 a.btn-add:hover {
     background-color: black;
